Updated bootstrap methiod to change startup behavior. Now it does not show startup screen.

--- a/src/todo-e-nc-console/todo-e-nc-console/todo-e-nc-console.csproj
+++ b/src/todo-e-nc-console/todo-e-nc-console/todo-e-nc-console.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>todo_e_nc_console</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ElectronNET.API" Version="7.30.2" />
+  </ItemGroup>
+
 </Project>
