--- a/src/todo-e-nc-console/todo-e-nc-web/todo-e-nc-web.csproj
+++ b/src/todo-e-nc-console/todo-e-nc-web/todo-e-nc-web.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>todo_e_nc_web</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="7.30.2" />
   </ItemGroup>
-
-
-
+  <ItemGroup>
+    <Content Update="electron.manifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
